--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<html>
 <head>
-    This is checking if the code is working or not. 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Odoo Hackathon Submission</title>
 </head>
+<body>
+    <!-- Add your content here -->
+</body>
 </html>
